--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>WeatherApp</title>
+  <link rel="stylesheet" href="./style.css">
+  <title>Cooper WeatherApp</title>
 </head>
 <body>
+  <div class="app">
+    <div class="logo">
+      <img src="./images/termometre.png" alt="" width="250px">
+    </div>
+    <div class="header">
+      <h1>Weather App</h1>
+      <div class="search">
+        <input type="text" name="" id="input" placeholder="Search for a city">
+        <button class="btn" id="submit">SUBMIT</button>
+
+      </div>
+    </div>
+    <div class="content">
+      <div class="city">Istanbul, TR</div>
+      <div class="temp">15</div>
+      <div class="icon"></div>
+      <div class="description">Güneşli</div>
+    </div>
+  </div>
   
 
 
-  <script src="./weatherApp.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
