--- a/index2.html
+++ b/index2.html
@@ -21,15 +21,15 @@
       </div>
     </div>
     <div class="content">
-      <div class="city">Kastamonu, TR</div>
-      <div class="temp">15</div>
-      <div class="icon"></div>
-      <div class="description">Güneşli</div>
+      <ul class="ulList">
+
+      </ul>
+     
     </div>
   </div>
   
 
 
-  <script src="./app.js"></script>
+  <script src="./app2.js"></script>
 </body>
 </html>
