uzun isim düzenleme, TR ekleme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="app">
     <div class="logo">
-      <img src="./images/termometre.png" alt="" width="250px">
+      <img src="./images/MEMOJİ.png" alt="" width="100px">
     </div>
     <div class="header">
       <h1>Weather App</h1>
@@ -21,10 +21,12 @@
       </div>
     </div>
     <div class="content">
-      <div class="city">Kastamonu, TR</div>
-      <div class="temp">15</div>
-      <div class="icon"></div>
-      <div class="description">Güneşli</div>
+      <p class="explain"> &nbsp; </p>
+      <ul class="ulList">
+
+      </ul> <br> <br>
+      <p>Made by Cooper</p>
+     
     </div>
   </div>
   
