--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="ulList">
 
       </ul> <br> <br>
-      <p>Made by Cooper</p>
+      <p>Made by @Cooper 😉</p>
      
     </div>
   </div>
